CSS tweaks, fixed right whitespace and carousel button bug

--- a/client/src/web/components/MissionLanding/MissionLanding.scss
+++ b/client/src/web/components/MissionLanding/MissionLanding.scss
@@ -2,7 +2,6 @@
   position:relative;
   height:450px;
   background-image:linear-gradient(to top,#E1E1E1,#E6E6E6,#F0F0F0,#FFF,#FFF);
-  width:100%;
   padding:2%;
 }
 
@@ -22,10 +21,11 @@ p{
 }
 
 .leftpara{
-  margin-top:3%;
   font-size:110%;
 }
 
 .divider{
   color:#bfbfbf;
 }
+
+//Need proper mobile support
